style: apply Google Java Format to source files